# Nvidia_AMD_Benchmark

./: .gitignore  CMakeLists.txt  README.md
cmake/: SelectBackend.cmake
include/bench/: args.hpp  backend.hpp  buffer.hpp  config.hpp  driver.hpp  gemm_matrix.hpp  gemm_mfma.hiph  gemm_tiled.hpp  gemm_wmma.cuh  gnnd_gemm.cuh  gnnd_gemm.hiph  gnnd_gemm.hpp  gpu_types.hpp  kernels_spinlock.hpp  kernels_validate.hpp  metrics.hpp  reference.hpp  timer.hpp  verify.hpp
scripts/: analyze.py  analyze_spinlock.py  plot_experiments.py  plot_gnnd.py  plot_gnnd_gemm.py  run_experiments.sh  run_gnnd_gemm.sh  run_gnnd_scale.sh  run_spinlock.sh  run_sweep.sh
src/hip/: main.hip
